# dynamic-wallpaper-builder

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
dynamic_wallpaper/: __init__.py  builder.py  cli.py
examples/: schedule.json
